[metadata]
# replace with your username:
name = respy_test
version = 0.0.1
url = https://github.com/pypa/sampleproject
author = Finn Upham
author_email = finn.upham@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A library to evalute single belt respiration recordings
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
